# kmeans-seeding

./: .gitignore  .readthedocs.yaml  CITATION.cff  CLAUDE.md  CMakeLists.txt  DOCUMENTATION_GUIDE.md  OPTIMIZATION_SUMMARY.md  PUBLICATION_GUIDE.md  README.md  RESTRUCTURE_PLAN.md  RS_KMEANS_OPTIMIZATION_PLAN.md  SETUP_SUMMARY.md  republish.sh  setup.py
.github/workflows/: build-wheels.yml  docs.yml  tests.yml
cpp/: CMakeLists.txt
cpp/include/kmeans_seeding/: fast_lsh.h  lightweight.hpp  prone.hpp  simd_utils.hpp
cpp/src/: fast_lsh.cpp  lightweight.cpp  prone.cpp  rs_kmeans.cpp  simd_utils.cpp
docs/: README.md
docs/archive/: BEFORE_AFTER_FIX.md  FIX_PYPI_PACKAGE.md  NEXT_STEPS.md  PROJECT_STATUS.md  PUBLISH_NOW.md  READY_FOR_PUBLICATION.md  REORGANIZATION_SUMMARY.md  TESTS_COMPLETE.md  URGENT_FIX_SUMMARY.md
docs/development/: CORRECT_ARCHITECTURE.md  FAISS_OPTIONAL_IMPLEMENTATION.md  FAST_LSH_OPTIMIZATIONS.md
docs/publishing/: PRE_PUBLISH_CHECKLIST.md  PUBLISHING_GUIDE.md  PUBLISH_COMMANDS.md  PUBLISH_STATUS.md  QUICK_START_GUIDE.md
docs_sphinx/: README.md  changelog.rst  conf.py  contributing.rst  references.rst  requirements.txt
docs_sphinx/_build/html/: .buildinfo  changelog.html  contributing.html  genindex.html  index.html  objects.inv  references.html  search.html  searchindex.js
docs_sphinx/_build/html/.doctrees/: changelog.doctree  contributing.doctree  index.doctree  references.doctree
docs_sphinx/_build/html/.doctrees/algorithms/: afkmc2.doctree  comparison.doctree  fast_lsh.doctree  kmeanspp.doctree  rskmeans.doctree
docs_sphinx/_build/html/.doctrees/api/: advanced.doctree  initializers.doctree
docs_sphinx/_build/html/.doctrees/user_guide/: choosing_algorithm.doctree  installation.doctree  quickstart.doctree  sklearn_integration.doctree
docs_sphinx/_build/html/_modules/: index.html
docs_sphinx/_build/html/_modules/kmeans_seeding/: initializers.html
docs_sphinx/_build/html/_sources/: index.rst.txt
docs_sphinx/_build/html/_sources/algorithms/: afkmc2.rst.txt  fast_lsh.rst.txt  rskmeans.rst.txt
docs_sphinx/_build/html/_sources/api/: initializers.rst.txt
docs_sphinx/_build/html/_sources/user_guide/: quickstart.rst.txt  sklearn_integration.rst.txt
docs_sphinx/_build/html/algorithms/: afkmc2.html  comparison.html  fast_lsh.html  kmeanspp.html  rskmeans.html
docs_sphinx/_build/html/api/: advanced.html  initializers.html
docs_sphinx/_build/html/user_guide/: choosing_algorithm.html  installation.html  quickstart.html  sklearn_integration.html
docs_sphinx/algorithms/: comparison.rst  kmeanspp.rst
docs_sphinx/api/: advanced.rst
docs_sphinx/user_guide/: choosing_algorithm.rst  installation.rst
examples/: CMakeLists.txt  basic_usage.cpp
experiments/: PRONE_BOOSTED_README.md  README.md  analyze_comprehensive.py  analyze_results.py  benchmark.cpp  benchmark_imdb.py  benchmark_imdb_results.csv  benchmark_prone_boosted.cpp  benchmark_results_prone_boosted.csv  benchmark_with_lightweight.cpp  imdb_comparison.py  imdb_comparison_log.txt  imdb_comparison_results.csv  imdb_comprehensive.py  imdb_comprehensive_log.txt  imdb_comprehensive_results.csv  monitor_progress.sh  plot_quality_speed_tradeoff.py  prone_boosted.cpp  prone_boosted.hpp  requirements.txt  test_prone.cpp
python/kmeans_seeding/: __init__.py
tests/: README.md  conftest.py  test_afkmc2.py  test_all_methods.py  test_different_seeds.py  test_fast_lsh.py  test_fast_lsh_stress.py  test_kmeanspp.py  test_package.py  test_real_datasets.py  test_rejection_sampling.py  test_rejection_sampling_lsh_2020.py  test_seeding_quality.py
